--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ section div:nth-of-type(3) input::-webkit-outer-spin-button,section div:nth-of-t
 }
 
 button {
+  display: block;
   text-align: center;
   padding: 10px;
   width: 95%;
